<resources>
    <string name="app_name">AppMantenimientoRoom</string>
    <string name="title_activity_listar_tarjeta">ListarTarjetaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valtitulo">Ingrese título</string>
    <string name="valcontnota">Ingrese contenido</string>
    <string name="valcolorrojo">Rojo</string>
    <string name="valcolorverde">Verde</string>
    <string name="valcoloramarillo">Amarillo</string>
    <string name="valseleccione">Seleccione el color de la nota</string>
    <string name="valnotafavorita">La tarjeta es importante</string>
</resources>
